--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -37,7 +37,7 @@
 
     <tr style="height: 18px;"  >
     <th class="resource-headx" title="{{ systemData.attributes.stu.label }}" >
-    Stun
+    <button style="height: 30px;"  class="clickapplydamge" data-tooltip-direction="UP" data-tooltip="Apply Temp Damage" >Stun</button>
     </th>
     <th class="resource-headx" title="{{ systemData.attributes.wou.tooltip }}">
         Wound
