--- a/templates/actors/parts/actor-starship-status.html
+++ b/templates/actors/parts/actor-starship-status.html
@@ -6,7 +6,7 @@
     <div class="divTable crewTable">
         <div class="divTableHeading">
         <div class="divTableRow">
-        <div class="divTableHead">TYPE</div>
+        <div class="divTableHead"><button style="height: 30px;"  class="clickapplydamge" data-tooltip-direction="UP" data-tooltip="Apply Temp Damage" >TYPE</button></div>
         <div class="divTableHead">DAMAGE STATUS</div>
 
         </div>
