--- a/templates/items/starshipAction.html
+++ b/templates/items/starshipAction.html
@@ -93,6 +93,40 @@
                     <input type="text" name="system.phase.tooltip" value="{{itemData.phase.tooltip}}" data-dtype="Text" />
                 </div>
             </div>
+            <div class="form-group" data-tooltip="{{ localize "Effect on a Critical Failure" }}">
+                <label>{{ localize "Critical Failure" }}</label>
+                <div class="form-fields">
+                    <textarea rows="4" cols="50" name="system.degreeText.critical"  placeholder="Enter text">{{itemData.degreeText.critical}}</textarea>
+                </div>
+            </div>
+
+            <div class="form-group" data-tooltip="{{ localize "Effect on a Failure" }}">
+                <label>{{ localize "Marginal Failure" }}</label>
+                <div class="form-fields">
+                    <textarea rows="4" cols="50" name="system.degreeText.failure"  placeholder="Enter text">{{itemData.degreeText.failure}}</textarea>
+                </div>
+            </div>
+
+            <div class="form-group" data-tooltip="{{ localize "Effect on a Ordinary Success" }}">
+                <label>{{ localize "Ordinary Success" }}</label>
+                <div class="form-fields">
+                    <textarea rows="4" cols="50" name="system.degreeText.ordinary"  placeholder="Enter text">{{itemData.degreeText.ordinary}}</textarea>
+                </div>
+            </div>
+
+            <div class="form-group" data-tooltip="{{ localize "Effect on a Good Success" }}">
+                <label>{{ localize "Good Success" }}</label>
+                <div class="form-fields">
+                    <textarea rows="4" cols="50" name="system.degreeText.good"  placeholder="Enter text">{{itemData.degreeText.good}}</textarea>
+                </div>
+            </div>
+
+            <div class="form-group" data-tooltip="{{ localize "Effect on a Amazing Success" }}">
+                <label>{{ localize "Amazing Success" }}</label>
+                <div class="form-fields">
+                    <textarea rows="4" cols="50" name="system.degreeText.amazing"  placeholder="Enter text">{{itemData.degreeText.amazing}}</textarea>
+                </div>
+            </div>
 
 
 </div>
