Fixed Starship Actions

--- a/templates/items/starshipWeapon.html
+++ b/templates/items/starshipWeapon.html
@@ -54,7 +54,7 @@
                     </select>
                 </div>
             </div>
-
+<!--
             {{!-- Weapon Class --}}
             <div class="form-group">
                 <label>{{ localize "SFRPG.Items.ShipWeapon.WeaponClass" }}</label>
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-
+-->
             {{!-- Weapon Mount --}}
             <div class="form-group">
                 <label>{{ localize "Weapon Mount" }}</label>
@@ -190,8 +190,8 @@
             <div class="form-group" data-tippy-content="{{ localize "d100A.Items.Weapon.typeTooltip" }}">
 
              <label>{{ localize "d100A.Items.Weapon.typename" }}</label>
-             <select name="system.type">
-             {{#select itemData.type}}
+             <select name="system.damage.type">
+             {{#select itemData.damage.type}}
              {{#each d100Aconfig.damagetype as |name type|}}
              <option value="{{type}}">{{name}}</option>
              {{/each}}
@@ -205,14 +205,14 @@
                   <label>{{ localize "d100A.Items.Weapon.firepowername" }}</label>
                   <select name="system.firepower">
                   {{#select itemData.firepower}}
-                  {{#each d100Aconfig.firepower as |name type|}}
+                  {{#each d100Aconfig.starshipFirepower as |name type|}}
                   <option value="{{type}}">{{name}}</option>
                   {{/each}}
                   {{/select}}
                   </select>
                 </div> 
 
-                                            
+                                       
                 {{!-- Weapon Damage O --}}
                 <div class="form-group" data-tippy-content="{{ localize "d100A.Items.Weapon.damageTooltip" }}">
 
